Update project configuration and styles; remove obsolete branding documentation. Added Prisma migration directory to .gitignore, updated Next.js and React versions, and refined Tailwind CSS dark mode settings. Enhanced login screens with new branding elements and improved accessibility features.

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "start": "next start",
     "lint": "eslint",
     "seed": "npx tsx prisma/seed.ts",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:migrate:deploy": "prisma migrate deploy",
-    "prisma:studio": "prisma studio",
-    "prisma:format": "prisma format",
-    "prisma:validate": "prisma validate",
-    "prisma:push": "prisma db push",
-    "prisma:reset": "prisma migrate reset"
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio",
+    "db:format": "prisma format",
+    "db:validate": "prisma validate",
+    "db:push": "prisma db push",
+    "db:reset": "prisma migrate reset"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed.ts"
@@ -43,12 +43,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^16.0.4",
     "numeral": "^2.0.6",
     "prisma": "^6.18.0",
-    "react": "19.1.0",
+    "react": "19.2.0",
     "react-big-calendar": "^1.19.4",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -65,7 +65,7 @@
     "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^16.0.4",
     "shadcn": "^3.3.1",
     "tailwindcss": "^4",
     "tsx": "^4.19.2",
